fix homepage banner showing on small devices

--- a/wp-content/themes/toolbox v2/style.scss
+++ b/wp-content/themes/toolbox v2/style.scss
@@ -909,6 +909,10 @@ body {
 	.home & {
 		padding-top: 30%;
 
+		@media (max-width: 40em) {
+			height: 0;
+			padding-top: 0;
+		}
 		.search-wrapper {
 
 			@media (max-width: 40em) {
